--- a/global_controller/Makefile
+++ b/global_controller/Makefile
@@ -1,9 +1,9 @@
 #!/bin/bash
-DESIGN = ./design
-TB = ./testbench
-GENESIS_DIR = $(DESIGN)/genesis
+RTL = ./rtl
+TB = ./sim
+GENESIS_DIR = $(RTL)/genesis
 TB_GENESIS_DIR = $(TB)/genesis
-RTL_DIR = $(DESIGN)/genesis_verif
+RTL_DIR = $(RTL)/genesis_verif
 TB_RTL_DIR = $(TB)/genesis_verif
 GENESIS_FILES := $(wildcard $(GENESIS_DIR)/*.svp)
 TB_GENESIS_FILES := $(wildcard $(TB_GENESIS_DIR)/*.svp)
@@ -19,7 +19,6 @@ TB_NCSIM = irun \
 		-vcdextend \
 		-input "$(TB)/cmd.tcl" \
 		-top top \
-		-v /cad/cadence/GENUS_19.10.000_lnx86/share/synth/lib/chipware/sim/verilog/CW/CW_tap.v \
 		-F $(TB)/tb_$(TOP_MODULE).filelist 
 		# -coverage all \
 
@@ -32,8 +31,8 @@ NCSIM = irun \
 		-notimingchecks \
 		-vcdextend \
 		-top $(TOP_MODULE) \
-		-v /cad/cadence/GENUS_19.10.000_lnx86/share/synth/lib/chipware/sim/verilog/CW/CW_tap.v \
-		-F $(TOP_MODULE).filelist 
+		-F $(TOP_MODULE).filelist \
+		-F TB_$(TOP_MODULE).filelist 
 		# -coverage all \
 
 SIMV = ./simv \
@@ -42,22 +41,18 @@ SIMV = ./simv \
 	   -assert nopostproc \
 	   -l vcs.log
 
-GEN_FILELIST = \
+GEN_RTL_FILELIST = \
 	find $(RTL_DIR) -type f -name '*.sv' > $(TOP_MODULE).filelist; \
-	find ./systemRDL/output -type f -name '*.sv' >> $(TOP_MODULE).filelist;
+	find ./systemRDL/output -type f -name '*.sv' >> $(TOP_MODULE).filelist; \
+	echo "/cad/cadence/GENUS_19.10.000_lnx86/share/synth/lib/chipware/sim/verilog/CW/CW_tap.v" >> $(TOP_MODULE).filelist; \
 
 
-.PHONY: rdl clean compile html genesis tb_genesis rtl tb_rtl tb_compile
+.PHONY: rdl clean compile html genesis sim_genesis rtl tb_rtl tb_compile
 
 genesis: $(GENESIS_FILES)
-	Genesis2.pl -parse -generate -top ${TOP_MODULE} -inputlist $(GENESIS_DIR)/$(TOP_MODULE).filelist && \
-	rm -rf $(RTL_DIR) && \
-	mv genesis_verif $(RTL_DIR)
-
-tb_genesis: $(TB_GENESIS_FILES)
-	Genesis2.pl -parse -generate -top top -inputlist $(TB_GENESIS_DIR)/tb_$(TOP_MODULE).filelist $(GENESIS_DIR)/$(TOP_MODULE).filelist && \
-	rm -rf $(TB_RTL_DIR) && \
-	mv genesis_verif $(TB_RTL_DIR)
+	cd $(RTL) && \
+	./genesis_clean.cmd && \
+	Genesis2.pl -parse -generate -top ${TOP_MODULE} -inputlist $(TOP_MODULE).genesis.filelist
 
 rdl: systemRDL/rdl_models/glc.rdl systemRDL/ordt_params/glc.parms
 	../systemRDL/perlpp.pl systemRDL/rdl_models/glc.rdl -o systemRDL/rdl_models/glc.rdl.final
@@ -67,17 +62,22 @@ html: rdl
 
 rtl: rdl genesis
 	java -jar ../systemRDL/Ordt.jar -parms systemRDL/ordt_params/glc.parms -systemverilog systemRDL/output/ systemRDL/rdl_models/glc.rdl.final
-	$(GEN_FILELIST)
+	$(GEN_RTL_FILELIST)
+
+sim_genesis: $(TB_GENESIS_FILES)
+	cd $(TB) && \
+	./genesis_clean.cmd && \
+	Genesis2.pl -parse -generate -top top -inputlist tb_$(TOP_MODULE).genesis.filelist
 
 compile: rtl
 	$(NCSIM) 
 
-tb_compile: tb_rtl rtl tb_genesis
+tb_compile: tb_rtl rtl sim_genesis
 	$(TB_NCSIM)
 
-run: tb_compile
+sim: tb_compile
 	$(SIMV)
 
 clean:
 	rm -rf coverage.vdb csrc DVEfiles inter.vpd simv simv.daidir ucli.key vc_hdrs.h vcs.log INCA_libs irun.history irun.log $(TOP_MODULE).filelist
-	cd $(DESIGN); ./genesis_clean.cmd
+	cd $(RTL); ./genesis_clean.cmd
