Move to xcelium

--- a/global_controller/Makefile
+++ b/global_controller/Makefile
@@ -3,13 +3,30 @@ RTL = ./rtl
 TB = ./sim
 GENESIS_DIR = $(RTL)/genesis
 TB_GENESIS_DIR = $(TB)/genesis
-RTL_DIR = $(RTL)/genesis_verif
-TB_RTL_DIR = $(TB)/genesis_verif
+RTL_DIR = rtl_genesis_verif
+TB_RTL_DIR = sim_genesis_verif
 GENESIS_FILES := $(wildcard $(GENESIS_DIR)/*.svp)
 TB_GENESIS_FILES := $(wildcard $(TB_GENESIS_DIR)/*.svp)
 TOP_MODULE = global_controller
 
-TB_NCSIM = irun \
+XRUN = xrun \
+       -64bit \
+       -sv \
+       -sysv \
+       -l xrun.log \
+       -notimingchecks \
+       -covoverwrite \
+       -top top \
+       -timescale 100ps/1ps \
+       +loadpli1=debpli:deb_PLIPtr \
+       -initmem0 \
+       -initreg0 \
+       +access+rwc \
+       +maxdelays \
+       $(XRUNARGS) \
+       $(DESIGNARGS)
+
+NCSIM = irun \
 		-timescale 1ns/1ps \
 		-l irun.log \
 		-sv \
@@ -19,20 +36,7 @@ TB_NCSIM = irun \
 		-vcdextend \
 		-input "$(TB)/cmd.tcl" \
 		-top top \
-		-F $(TB)/tb_$(TOP_MODULE).filelist 
-		# -coverage all \
-
-NCSIM = irun \
-		-timescale 1ns/1ps \
-		-l irun.log \
-		-sv \
-		-sysv \
-		-64bit \
-		-notimingchecks \
-		-vcdextend \
-		-top $(TOP_MODULE) \
-		-F $(TOP_MODULE).filelist \
-		-F TB_$(TOP_MODULE).filelist 
+		-F tb_$(TOP_MODULE).filelist 
 		# -coverage all \
 
 SIMV = ./simv \
@@ -44,15 +48,20 @@ SIMV = ./simv \
 GEN_RTL_FILELIST = \
 	find $(RTL_DIR) -type f -name '*.sv' > $(TOP_MODULE).filelist; \
 	find ./systemRDL/output -type f -name '*.sv' >> $(TOP_MODULE).filelist; \
-	echo "/cad/cadence/GENUS_19.10.000_lnx86/share/synth/lib/chipware/sim/verilog/CW/CW_tap.v" >> $(TOP_MODULE).filelist; \
+	echo "/cad/cadence/GENUS_19.10.000_lnx86/share/synth/lib/chipware/sim/verilog/CW/CW_tap.v" >> $(TOP_MODULE).filelist
+
+GEN_TB_FILELIST = \
+	find $(TB_RTL_DIR) -type f -name '*.sv' > tb_$(TOP_MODULE).filelist; \
+	find ./systemRDL/output -type f -name '*.sv' >> tb_$(TOP_MODULE).filelist; \
+	echo "/cad/cadence/GENUS_19.10.000_lnx86/share/synth/lib/chipware/sim/verilog/CW/CW_tap.v" >> tb_$(TOP_MODULE).filelist
 
 
-.PHONY: rdl clean compile html genesis sim_genesis rtl tb_rtl tb_compile
+.PHONY: rdl clean html genesis sim_genesis rtl 
 
 genesis: $(GENESIS_FILES)
-	cd $(RTL) && \
-	./genesis_clean.cmd && \
-	Genesis2.pl -parse -generate -top ${TOP_MODULE} -inputlist $(TOP_MODULE).genesis.filelist
+	rm -rf $(RTL_DIR)
+	Genesis2.pl -parse -generate -top ${TOP_MODULE} -inputlist $(RTL)/$(TOP_MODULE).genesis.filelist
+	mv genesis_verif $(RTL_DIR)
 
 rdl: systemRDL/rdl_models/glc.rdl systemRDL/ordt_params/glc.parms
 	../systemRDL/perlpp.pl systemRDL/rdl_models/glc.rdl -o systemRDL/rdl_models/glc.rdl.final
@@ -65,18 +74,15 @@ rtl: rdl genesis
 	$(GEN_RTL_FILELIST)
 
 sim_genesis: $(TB_GENESIS_FILES)
-	cd $(TB) && \
-	./genesis_clean.cmd && \
-	Genesis2.pl -parse -generate -top top -inputlist tb_$(TOP_MODULE).genesis.filelist
+	rm -rf $(TB_RTL_DIR)
+	Genesis2.pl -parse -generate -top top -inputlist $(TB)/tb_$(TOP_MODULE).genesis.filelist $(RTL)/$(TOP_MODULE).genesis.filelist
+	mv genesis_verif $(TB_RTL_DIR)
 
-compile: rtl
-	$(NCSIM) 
-
-tb_compile: tb_rtl rtl sim_genesis
-	$(TB_NCSIM)
-
-sim: tb_compile
-	$(SIMV)
+sim: DESIGNARGS += \
+    -F tb_$(TOP_MODULE).filelist
+sim: rtl sim_genesis
+	$(GEN_TB_FILELIST)
+	$(XRUN)
 
 clean:
 	rm -rf coverage.vdb csrc DVEfiles inter.vpd simv simv.daidir ucli.key vc_hdrs.h vcs.log INCA_libs irun.history irun.log $(TOP_MODULE).filelist
