Assert that glb_tile outputs exist

--- a/mflowgen/glb_top/glb_tile/configure.yml
+++ b/mflowgen/glb_top/glb_tile/configure.yml
@@ -13,3 +13,10 @@ outputs:
   - glb_tile.lvs.v
   - sram.spi
 
+postconditions:
+  - assert File( 'outputs/glb_tile_tt.lib' ) # must exist
+  - assert File( 'outputs/glb_tile.lef' ) # must exist
+  - assert File( 'outputs/glb_tile.gds' ) # must exist
+  - assert File( 'outputs/glb_tile.lvs.v' ) # must exist
+  - assert File( 'outputs/sram.spi' ) # must exist
+
