--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -7,14 +7,14 @@ steps:
   agents: { jobsize: "hours" }
   commands:
   - test=mflowgen/test/test_module.sh
-  - $$test  --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
+  - $$test full_chip tile_array Tile_MemCore --steps synthesis --debug --need_space 30G --need_space 30G
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
 - label: 'PE synth 23m'
   agents: { jobsize: "hours" }
   commands:
   - test=mflowgen/test/test_module.sh
-  - $$test --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
+  - $$test full_chip tile_array Tile_PE --steps synthesis --debug --need_space 30G
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
 ##############################################################################
@@ -24,13 +24,14 @@ steps:
 # Also: uses about 3G
 # What's new:
 # 1) now testing --build_dir option, building in /sim/tmp instead of .
+# 2) also testing step aliases e.g. "syn" for "synthesis" (synopsys OR cadence)
 - label: 'array init 5m'
   agents: { jobsize: "hours" }
   commands:
   - build_dir=/sim/tmp/deleteme.buildkite-$$BUILDKITE_BUILD_NUMBER.array-init
   - 'mflowgen/test/test_module.sh full_chip tile_array --need_space 30G
        --debug
-       --use_cached constraints,MemCore,PE,rtl,synthesis,custom-dc-postcompile,tsmc16,synthesis
+       --use_cached constraints,MemCore,PE,rtl,syn,custom-dc-postcompile,tsmc16
        --build_dir $$build_dir
        --steps init'
   - echo /bin/rm -rf $$build_dir
