--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -1,3 +1,8 @@
+agents: { jobsize: "hours" }
+
+env:
+  TEST: 'echo exit 13 | mflowgen/test/test_module.sh'
+
 steps:
 
 ##############################################################################
@@ -5,20 +10,14 @@ steps:
 # 
 # Note: "echo exit 13" prevents hang at genus/innovus prompt
 - label: 'MemCore synth 17m'
-  agents: { jobsize: "hours" }
   commands:
-  - test=mflowgen/test/test_module.sh
-  - echo exit 13 | $$test  --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
+  - $TEST  --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
 - label: 'PE synth 23m'
-  agents: { jobsize: "hours" }
   commands:
-  - test=mflowgen/test/test_module.sh
-  - $$test full_chip tile_array Tile_PE --steps synthesis --debug --need_space 30G
+  - $TEST --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
-
-
 
 
 
