--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ coreir>=2.0.123  # should be first so we get the latest version
 -e git://github.com/phanrahan/mantle.git#egg=mantle
 ordered_set
 cosa
--e git://github.com/leonardt/fault.git@monitor-driver-sequence#egg=fault
+-e git://github.com/leonardt/fault.git#egg=fault
 hwtypes
 archipelago
 peakrdl-html
