Add stall port pass and config port pass

--- a/global_controller/Makefile
+++ b/global_controller/Makefile
@@ -23,6 +23,8 @@ XRUN = xrun \
        -initreg0 \
        +access+rwc \
        +maxdelays \
+	   -vcdextend \
+	   -input "$(TB)/cmd.tcl" \
        $(XRUNARGS) \
        $(DESIGNARGS)
 
