--- a/virtualization/Makefile
+++ b/virtualization/Makefile
@@ -1,5 +1,6 @@
 #!/bin/bash
 
+H2H := /sim/kongty/aha/Halide-to-Hardware/apps/hardware_benchmarks
 DESIGN := /sim/kongty/garnet/virtualization/build-fullchip/9-rtl/outputs/design.v
 XRUN = xrun \
 	   -64bit \
@@ -14,6 +15,7 @@ XRUN = xrun \
 	   +access+rw \
 	   +maxdelays \
 	   $(XRUN_ARGS) \
+	   $(APP_ARGS) \
 	   $(DESIGN_ARGS)
 
 
@@ -26,6 +28,7 @@ sim: DESIGN_ARGS += -y /cad/cadence/GENUS_19.10.000_lnx86/share/synth/lib/chipwa
 				    -y /cad/cadence/GENUS_19.10.000_lnx86/share/synth/lib/chipware/sim/verilog/CWTECH/ \
 				   	-v /home/kongty/mc/ts1n16ffcllsblvtc2048x64m8sw_130a/VERILOG/ts1n16ffcllsblvtc2048x64m8sw_130a.v \
 				   	-v /home/kongty/mc/ts1n16ffcllsblvtc512x32m4s_130a/VERILOG/ts1n16ffcllsblvtc512x32m4s_130a.v
+sim: APP_ARGS += +APP0=$(H2H)/tests/conv_3_3
 sim: $(DESIGN)
 	$(XRUN)
 
