--- a/mflowgen/tile_array/Tile_PE/configure.yml
+++ b/mflowgen/tile_array/Tile_PE/configure.yml
@@ -11,6 +11,9 @@ outputs:
   - Tile_PE.lef
   - Tile_PE.gds
   - Tile_PE.vcs.v
+  - Tile_PE.vcs.pg.v
+  - Tile_PE.pt.sdc
+  - Tile_PE.spef.gz
   - Tile_PE.lvs.v
   - Tile_PE.sdf
 
@@ -19,6 +22,9 @@ postconditions:
   - assert File( 'outputs/Tile_PE.lef' ) # must exist
   - assert File( 'outputs/Tile_PE.gds' ) # must exist
   - assert File( 'outputs/Tile_PE.vcs.v' ) # must exist
+  - assert File( 'outputs/Tile_PE.vcs.pg.v' ) # must exist
+  - assert File( 'outputs/Tile_PE.pt.sdc' ) # must exist
+  - assert File( 'outputs/Tile_PE.spef.gz' ) # must exist
   - assert File( 'outputs/Tile_PE.lvs.v' ) # must exist
   - assert File( 'outputs/Tile_PE.sdf' ) # must exist
 
