Some minor updates to get all the right files to the right places
Testing end-to-end w/ power regression

Currently works for:
No PD, No Flat

Currently broken for:
PD, Flat
PD, No Flat

Haven't tried yet:
No PD, Flat

--- a/mflowgen/common/gen_sram_macro/configure.yml
+++ b/mflowgen/common/gen_sram_macro/configure.yml
@@ -12,6 +12,7 @@ outputs:
   - sram.lef
   - sram_tt.lib
   - sram_ff.lib
+  - sram_tt.db  # Need this back for power on ptpx
   - sram.gds
   - sram.spi
 
