--- a/mflowgen/tile_array/Tile_MemCore/configure.yml
+++ b/mflowgen/tile_array/Tile_MemCore/configure.yml
@@ -18,6 +18,7 @@ outputs:
   - Tile_MemCore.spef.gz
   - sram.spi
   - sram.v
+  - sram-pwr.v
 
 postconditions:
   - assert File( 'outputs/Tile_MemCore_tt.lib' ) # must exist
@@ -31,4 +32,6 @@ postconditions:
   - assert File( 'outputs/Tile_MemCore.sdf' ) # must exist
   - assert File( 'outputs/sram.spi' ) # must exist
   - assert File( 'outputs/sram.v' ) # must exist
+  - assert File( 'outputs/sram-pwr.v' ) # must exist
+  - assert File( 'outputs/sram_tt.db' ) # must exist
 
