--- a/.buildkite/pipeline_fullchip.yml
+++ b/.buildkite/pipeline_fullchip.yml
@@ -14,28 +14,31 @@ steps:
      mflowgen run --design $$GARNET_HOME/mflowgen/full_chip'
 - wait: ~
 
+
+# Does this work to bypass rtl build???
 - label: 'rtl'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 100G;
      echo "--- MAKE RTL"; set -o pipefail;
+     cp -rp /sim/buildkite-agent/gold/8-rtl/ .;
+
+     echo "+++ make -n rtl";
+     make -n rtl;
+
+     echo "--- make rtl";
      make rtl |& tee make-rtl.log'
 - wait: ~
-
-# - label: 'tile_array'
-#   commands:
-#   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 100G;
-#      echo "--- MAKE TILE_ARRAY"; set -o pipefail;
-#      make tile_array |& tee make-tile_array.log'
-# - wait: ~
 
 # Does this work to bypass tile_array build???
 - label: 'tile_array'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 100G;
      echo "--- MAKE TILE_ARRAY"; set -o pipefail;
-     cp -rp /sim/buildkite-agent/gold/17-tile_array/ .
-     echo "-------------"
-     make -n tile_array
-     echo "-------------"
+     cp -rp /sim/buildkite-agent/gold/17-tile_array/ .;
+
+     echo "+++ make -n tile_array";
+     make -n tile_array;
+
+     echo "--- make tile_array";
      make tile_array |& tee make-tile_array.log'
 - wait: ~
