--- a/.buildkite/pipeline_fullchip.yml
+++ b/.buildkite/pipeline_fullchip.yml
@@ -15,11 +15,11 @@ steps:
 - wait: ~
 
 
-# Does this work to bypass rtl build???
-- label: 'rtl'
+# Bypass rtl build
+- label: 'rtl*'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 100G;
-     echo "--- MAKE RTL"; set -o pipefail;
+     echo "--- COPY RTL"; set -o pipefail;
      cp -rp /sim/buildkite-agent/gold/full_chip/9-rtl/ .;
 
      echo "+++ make -n rtl";
@@ -29,11 +29,11 @@ steps:
      make rtl |& tee make-rtl.log'
 - wait: ~
 
-# Does this work to bypass tile_array build???
-- label: 'tile_array'
+# Bypass tile_array
+- label: 'tile_array*'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 100G;
-     echo "--- MAKE TILE_ARRAY"; set -o pipefail;
+     echo "--- COPY TILE_ARRAY"; set -o pipefail;
      cp -rp /sim/buildkite-agent/gold/full_chip/17-tile_array/ .;
 
      echo "+++ make -n tile_array";
@@ -42,3 +42,104 @@ steps:
      echo "--- make tile_array";
      make tile_array |& tee make-tile_array.log'
 - wait: ~
+
+# Bypass
+- label: 'glb_top*'
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 84G;
+     echo "--- COPY GLB_TOP"; set -o pipefail;
+     cp -rp /sim/buildkite-agent/gold/full_chip/*-glb_top/ .;
+
+     echo "+++ make -n glb_top";
+     make -n glb_top;
+
+     echo "--- make glb_top";
+     make glb_top |& tee make-glb_top.log'
+- wait: ~
+
+# Bypass
+- label: 'GLC*'
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 74G;
+     echo "--- MAKE GLOBAL_CONTROLLER"; set -o pipefail;
+     cp -rp /sim/buildkite-agent/gold/full_chip/*-global_controller/ .;
+
+     echo "+++ make -n global_controller";
+     make -n global_controller;
+
+     echo "--- make global_controller";
+     make global_controller |& tee make-GLC.log'
+- wait: ~
+
+# 5 sec
+- label: 'dragon'
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 74G;
+     echo "--- MAKE DRAGONPHY"; set -o pipefail;
+     make dragonphy |& tee make-dragon.log'
+- wait: ~
+
+# 5 sec
+- label: 'soc-rtl'
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 73G;
+     echo "--- MAKE SOC-RTL"; set -o pipefail;
+     make soc-rtl |& tee make-soc-rtl.log'
+- wait: ~
+
+- label: 'syn'
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 72G;
+     echo "--- MAKE SYNOPSYS-DC-SYNTHESIS"; set -o pipefail;
+     make cadence-genus-synthesis |& tee make-syn.log'
+- wait: ~
+
+- label: 'cts'
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 71G;
+     echo "--- MAKE CADENCE-INNOVUS-CTS"; set -o pipefail;
+     make cadence-innovus-cts |& tee make-cts.log'
+- wait: ~
+
+- label: 'place'
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 71G;
+     echo "--- MAKE CADENCE-INNOVUS-PLACE"; set -o pipefail;
+     make cadence-innovus-place |& tee make-place.log'
+- wait: ~
+
+- label: 'route'
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 71G;
+     echo "--- MAKE CADENCE-INNOVUS-ROUTE"; set -o pipefail;
+     make cadence-innovus-route |& tee make-route.log'
+- wait: ~
+
+- label: 'postroute'
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 71G;
+     echo "--- MAKE CADENCE-INNOVUS-POSTROUTE"; set -o pipefail;
+     make cadence-innovus-postroute |& tee make-postroute.log'
+- wait: ~
+
+- label: 'hold'
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
+     echo "--- MAKE CADENCE-INNOVUS-POSTROUTE_HOLD"; set -o pipefail;
+     make cadence-innovus-postroute_hold |& tee make-hold.log'
+- wait: ~
+
+- label: 'lvs'
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 61G;
+     echo "--- MAKE MENTOR-CALIBRE-LVS"; set -o pipefail;
+     make mentor-calibre-lvs |& tee make-lvs.log'
+- wait: ~
+
+- label: 'drc'
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 18G;
+     echo "--- MAKE MENTOR-CALIBRE-DRC"; set -o pipefail;
+     make mentor-calibre-drc |& tee make-drc.log'
+- wait: ~
+
