prevent innovus prompt hang

--- a/.buildkite/pipeline_fullchip.yml
+++ b/.buildkite/pipeline_fullchip.yml
@@ -99,35 +99,35 @@ steps:
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 71G;
      echo "--- MAKE CADENCE-INNOVUS-CTS"; set -o pipefail;
-     make cadence-innovus-cts |& tee make-cts.log'
+     echo exit 13 | make cadence-innovus-cts |& tee make-cts.log'
 - wait: ~
 
 - label: 'place'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 71G;
      echo "--- MAKE CADENCE-INNOVUS-PLACE"; set -o pipefail;
-     make cadence-innovus-place |& tee make-place.log'
+     echo exit 13 | make cadence-innovus-place |& tee make-place.log'
 - wait: ~
 
 - label: 'route'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 71G;
      echo "--- MAKE CADENCE-INNOVUS-ROUTE"; set -o pipefail;
-     make cadence-innovus-route |& tee make-route.log'
+     echo exit 13 | make cadence-innovus-route |& tee make-route.log'
 - wait: ~
 
 - label: 'postroute'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 71G;
      echo "--- MAKE CADENCE-INNOVUS-POSTROUTE"; set -o pipefail;
-     make cadence-innovus-postroute |& tee make-postroute.log'
+     echo exit 13 | make cadence-innovus-postroute |& tee make-postroute.log'
 - wait: ~
 
 - label: 'hold'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
      echo "--- MAKE CADENCE-INNOVUS-POSTROUTE_HOLD"; set -o pipefail;
-     make cadence-innovus-postroute_hold |& tee make-hold.log'
+     echo exit 13 | make cadence-innovus-postroute_hold |& tee make-hold.log'
 - wait: ~
 
 - label: 'lvs'
