--- a/.buildkite/pipeline_fullchip.yml
+++ b/.buildkite/pipeline_fullchip.yml
@@ -14,7 +14,6 @@ steps:
      mflowgen run --design $$GARNET_HOME/mflowgen/full_chip'
 - wait: ~
 
-
 - label: 'rtl'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 100G;
@@ -22,6 +21,7 @@ steps:
      make rtl |& tee make-rtl.log'
 - wait: ~
 
+# Note: "echo exit 13" prevents hang at genus/innovus prompt
 - label: 'tile_array'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 100G;
