Remove unused parameter

--- a/global_controller/Makefile
+++ b/global_controller/Makefile
@@ -8,7 +8,7 @@ TB_RTL_DIR = sim_genesis_verif
 GENESIS_FILES := $(wildcard $(GENESIS_DIR)/*.svp)
 TB_GENESIS_FILES := $(wildcard $(TB_GENESIS_DIR)/*.svp)
 TOP_MODULE = global_controller
-CGRA_WIDTH := 32
+CGRA_WIDTH ?= 32
 NUM_GLB_TILES := $(shell expr $(CGRA_WIDTH) / 2 )
 
 XRUN = xrun \
