--- a/.buildkite/pipeline_fullchip.yml
+++ b/.buildkite/pipeline_fullchip.yml
@@ -14,61 +14,33 @@ steps:
      mflowgen run --design $$GARNET_HOME/mflowgen/full_chip'
 - wait: ~
 
-
-# Bypass rtl build
-- label: 'rtl*'
+- label: 'rtl'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 100G;
-     echo "--- COPY RTL"; set -o pipefail;
-     cp -rp /sim/buildkite-agent/gold/full_chip/9-rtl/ .;
-
-     echo "+++ make -n rtl";
-     make -n rtl;
-
-     echo "--- make rtl";
+     echo "--- MAKE RTL"; set -o pipefail;
      make rtl |& tee make-rtl.log'
 - wait: ~
 
-# Bypass tile_array
-- label: 'tile_array*'
+# Note: "echo exit 13" prevents hang at genus/innovus prompt
+- label: 'tile_array'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 100G;
-     echo "--- COPY TILE_ARRAY"; set -o pipefail;
-     cp -rp /sim/buildkite-agent/gold/full_chip/17-tile_array/ .;
-
-     echo "+++ make -n tile_array";
-     make -n tile_array;
-
-     echo "--- make tile_array";
-     make tile_array |& tee make-tile_array.log'
+     echo "--- MAKE TILE_ARRAY"; set -o pipefail;
+     echo exit 13 | make tile_array |& tee make-tile_array.log'
 - wait: ~
 
-# Bypass
-- label: 'glb_top*'
+- label: 'glb_top'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 84G;
-     echo "--- COPY GLB_TOP"; set -o pipefail;
-     cp -rp /sim/buildkite-agent/gold/full_chip/*-glb_top/ .;
-
-     echo "+++ make -n glb_top";
-     make -n glb_top;
-
-     echo "--- make glb_top";
-     make glb_top |& tee make-glb_top.log'
+     echo "--- MAKE GLB_TOP"; set -o pipefail;
+     echo exit 13 | make glb_top |& tee make-glb_top.log'
 - wait: ~
 
-# Bypass
-- label: 'GLC*'
+- label: 'GLC'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 74G;
      echo "--- MAKE GLOBAL_CONTROLLER"; set -o pipefail;
-     cp -rp /sim/buildkite-agent/gold/full_chip/*-global_controller/ .;
-
-     echo "+++ make -n global_controller";
-     make -n global_controller;
-
-     echo "--- make global_controller";
-     make global_controller |& tee make-GLC.log'
+     echo exit 13 | make global_controller |& tee make-GLC.log'
 - wait: ~
 
 # 5 sec
