Add comment about where token is stored

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -35,5 +35,6 @@ jobs:
         docker exec -i garnet bash -c "/garnet/.github/scripts/run.sh"
     - name: Upload Coverage
       shell: bash
+      # CODECOV_TOKEN secret stored at https://github.com/StanfordAHA/garnet/settings/secrets/actions
       run: |
         docker exec -i garnet bash -c "cd /garnet/ && bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV_TOKEN }}"
