--- a/virtualization/Makefile
+++ b/virtualization/Makefile
@@ -27,20 +27,8 @@ XRUN = xrun \
 	   $(APP_ARGS) \
 	   $(DESIGN_ARGS)
 
-gen.so: gen.c gen.h
-	gcc -Wno-error -Wall gen.c -shared -o gen.so -fPIC
-
-map.so: map.c map.h
-	gcc -DNUM_COLS=$(CGRA_WIDTH) -Wno-error -Wall map.c -shared -o map.so -fPIC
-
-parser.so: parser.c parser.h
-	gcc -Wno-error -Wall parser.c -shared -o parser.so -fPIC
-
-test: test.c parser.so map.so gen.so
-	gcc -Wno-error -Wall test.c gen.so map.so parser.so -o test
-
-test-all: test
-	LD_LIBRARY_PATH=. ./test
+libcgra.so: map.c map.h gen.c gen.h parser.c parser.h
+	gcc -Wno-error -Wall parser.c map.c gen.c -shared -o libcgra.so -fPIC
 
 # generate rtl
 .PHONY: glb-rtl glc-rtl
@@ -52,18 +40,16 @@ glc-rtl:
 	$(MAKE) -C $(glc_dir) rtl CGRA_WIDTH=$(CGRA_WIDTH)
 
 # run testbench of glb with xcelium
-.PHONY: sim map.so
+.PHONY: sim
 sim: XRUN_ARGS += +libext+.v+.sv -top top
-sim: XRUN_ARGS += -sv_lib parser.so map.so gen.so
-
+sim: XRUN_ARGS += -sv_lib libcgra.so
 # sim: XRUN_ARGS += +VCD_ON
 sim: XRUN_ARGS += +define+CGRA_WIDTH=$(CGRA_WIDTH) +define+AXI_ADDR_WIDTH=$(AXI_ADDR_WIDTH) +define+AXI_DATA_WIDTH=$(AXI_DATA_WIDTH)
 sim: DESIGN_ARGS += -v $(garnet_dir)/garnet.v -v $(glb_dir)/rtl/TS1N16FFCLLSBLVTC2048X64M8SW.sv -v $(garnet_dir)/tests/AN2D0BWP16P90.sv -v $(garnet_dir)/tests/AO22D0BWP16P90.sv
 sim: DESIGN_ARGS += -F tb_garnet.filelist -F $(glb_dir)/rtl/global_buffer.filelist -F $(glc_dir)/global_controller.filelist
 sim: DESIGN_ARGS += -y /cad/cadence/GENUS_19.10.000_lnx86/share/synth/lib/chipware/sim/verilog/CW/ \
 				    -y /cad/cadence/GENUS_19.10.000_lnx86/share/synth/lib/chipware/sim/verilog/CWTECH/ 
-
-sim: glb-rtl glc-rtl map.so gen.so parser.so top.sv garnet_param.svh garnet_test.sv kernel.sv proc_driver.sv axil_driver.sv axil_ifc.sv proc_ifc.sv environment.sv
+sim: glb-rtl glc-rtl libcgra.so top.sv garnet_param.svh garnet_test.sv kernel.sv proc_driver.sv axil_driver.sv axil_ifc.sv proc_ifc.sv environment.sv
 	$(XRUN)
 
 .PHONY: clean
