Change garnet directory

--- a/tests/test_app/Makefile
+++ b/tests/test_app/Makefile
@@ -6,7 +6,7 @@ AXI_DATA_WIDTH := 32
 
 mkfile_path := $(abspath $(lastword $(MAKEFILE_LIST)))
 mkfile_dir := $(dir $(mkfile_path))
-garnet_dir := $(mkfile_dir)/..
+garnet_dir := $(mkfile_dir)/../..
 glb_dir := $(garnet_dir)/global_buffer
 glc_dir := $(garnet_dir)/global_controller
 
