Add glb-tile ff lib to glbtile outputs

--- a/mflowgen/glb_top/glb_tile/configure.yml
+++ b/mflowgen/glb_top/glb_tile/configure.yml
@@ -8,10 +8,14 @@ inputs:
 
 outputs:
   - glb_tile_tt.lib
+  - glb_tile_ff.lib
   - glb_tile.lef
   - glb_tile.gds
   - glb_tile.lvs.v
   - sram.spi
+
+parameters:
+  multicorner: True
 
 postconditions:
   - assert File( 'outputs/glb_tile_tt.lib' ) # must exist
