--- a/mflowgen/Tile_PE/testbench/configure.yml
+++ b/mflowgen/Tile_PE/testbench/configure.yml
@@ -2,9 +2,11 @@ name: testbench
 
 inputs:
   - run.vcd
-  - tile_Tile_PE.list
+  - tiles_Tile_PE.list
 
 outputs:
+  - cmd.tcl
+  - testbench.sv
   - tile_tbs
 
 commands:
