--- a/mflowgen/Tile_PE/post-pnr-power/setup/configure.yml
+++ b/mflowgen/Tile_PE/post-pnr-power/setup/configure.yml
@@ -27,8 +27,8 @@ commands:
   - cp ../../inputs/design.vcs.v outputs/design.vcs.v
   - cp ../../inputs/design.vcs.pg.v outputs/design.vcs.pg.v
   - cp ../../inputs/testbench.sv outputs/testbench.sv
-  - cp ../../tile_tbs/${tile_id}/test_vectors.txt outputs/test_vectors.txt
-  - cp ../../tile_tbs/${tile_id}/test_outputs.txt outputs/test_outputs.txt
+  - cp ../../inputs/tile_tbs/{tile_id}/test_vectors.txt outputs/test_vectors.txt
+  - cp ../../inputs/tile_tbs/{tile_id}/test_outputs.txt outputs/test_outputs.txt
 
 parameters:
   tile_id: Tile_X01_Y01
