--- a/global_controller/Makefile
+++ b/global_controller/Makefile
@@ -10,6 +10,7 @@ TB_GENESIS_FILES := $(wildcard $(TB_GENESIS_DIR)/*.svp)
 TOP_MODULE = global_controller
 CGRA_WIDTH ?= 32
 NUM_GLB_TILES := $(shell expr $(CGRA_WIDTH) / 2 )
+GLB_TILE_MEM_SIZE ?= 256
 
 XRUN = xrun \
        -64bit \
@@ -71,7 +72,7 @@ GEN_TB_FILELIST = \
 
 genesis: $(GENESIS_FILES)
 	rm -rf $(RTL_DIR)
-	Genesis2.pl -parse -generate -top ${TOP_MODULE} -inputlist $(RTL)/$(TOP_MODULE).genesis.filelist -parameter global_controller.num_glb_tiles=$(NUM_GLB_TILES)
+	Genesis2.pl -parse -generate -top ${TOP_MODULE} -inputlist $(RTL)/$(TOP_MODULE).genesis.filelist -parameter global_controller.num_glb_tiles=$(NUM_GLB_TILES) global_controller.glb_tile_mem_size=$(GLB_TILE_MEM_SIZE)
 	mv genesis_verif $(RTL_DIR)
 
 rdl: systemRDL/rdl_models/glc.rdl systemRDL/ordt_params/glc.parms
