--- a/mflowgen/full_chip/glb_top/configure.yml
+++ b/mflowgen/full_chip/glb_top/configure.yml
@@ -14,6 +14,10 @@ outputs:
   - glb_top.sdf
   - glb_top.lvs.v
   - glb_top.sram.spi
+  - glb_top.sram.v
+  - glb_top.sram.pwr.v
+  - glb_top.sram_tt.lib
+  - glb_top.sram_ff.lib
 
 postconditions:
   - assert File( 'outputs/glb_top_tt.lib' ) # must exist
@@ -23,4 +27,8 @@ postconditions:
   - assert File( 'outputs/glb_top.sdf' ) # must exist
   - assert File( 'outputs/glb_top.lvs.v' ) # must exist
   - assert File( 'outputs/glb_top.sram.spi' ) # must exist
+  - assert File( 'outputs/glb_top.sram.v' ) # must exist
+  - assert File( 'outputs/glb_top.sram.pwr.v' ) # must exist
+  - assert File( 'outputs/glb_top.sram_tt.lib' ) # must exist
+  - assert File( 'outputs/glb_top.sram_ff.lib' ) # must exist
 
